--- a/happyone_saas/Gemfile
+++ b/happyone_saas/Gemfile
@@ -14,6 +14,8 @@ end
 
 # Use SCSS for stylesheets
 gem 'sass-rails', '4.0.3'
+# Use bootstrap library for styles
+gem 'bootstrap-sass', '3.3.1'
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
 # Use CoffeeScript for .js.coffee assets and views
